# CAPE

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/CAPE/: cape_scbert.yaml  cape_scgpt.yaml
configs/CTA/: scbert_CTA.yaml  scgpt_CTA.yaml
configs/models/: scbert.yaml  scgpt.yaml
scripts/: run_scbert_CTA.sh  run_scgpt_CTA.sh
src/: dag.py  hyperbolic.py  main.py  pipeline.py  rotary.py
src/CTA/: __init__.py  framework.py  metrics.py
src/data/: __init__.py  collator.py  dataset.py  label_utils.py  preprocess.py  tokenizer.py
src/models/: __init__.py  pretrained.py
src/models/cape/: __init__.py  dag_sem.py  encoder.py  integration.py  loss.py  modules.py  predictor.py  rope.py  sem.py
src/models/scbert/: __init__.py  checkpoint.py  configuration_scbert.py  hf_export.py  model.py  modeling_scbert.py  performer_pytorch.py  pretrained.py  processing_scbert.py  utils.py  wrapper.py
src/models/scgpt/: __init__.py  checkpoint.py  configuration_scgpt.py  model.py  modeling_scgpt.py  pretrained.py  processing_scgpt.py  tokenizer.py  utils.py  wrapper.py
src/pipeline/: __init__.py  cta_pipeline.py
src/tasks/: __init__.py  cell_type_annotation.py
src/utils/: __init__.py  config.py  io.py  logger.py  metrics.py  seed.py
tests/: test_backend_helpers.py  test_config.py  test_data_and_utils.py  test_pipeline_smoke.py  test_pretrained.py  test_scbert_pretrained.py  test_scgpt_pretrained.py
